# strategy-automate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CURSOR.md  GEMINI.md  GROK.md  LICENSE  OLLAMA.md  README.md  build_supply_chain.py  fix_relationships.py  pyproject.toml  strategy-brand.skill  strategy-product-knowledge.skill  supply_chain_dict.json  supply_chain_erd.mmd
memory/: MEMORY.md  checklist_strategy_automation_modeling_playbook.md  checklist_strategy_model_build.md  checklist_strategy_model_design.md  checklist_strategy_model_review.md  feedback_build_mosaic_conforming_attr_rules.md  feedback_build_mosaic_session_leak.md  feedback_business_logic_pass_mandatory.md  feedback_consumer_grade_naming.md  feedback_generalize_durable_artifacts.md  feedback_mosaic_build_quality.md  feedback_mosaic_description_length_cap.md  feedback_mosaic_forms_and_formats.md  feedback_mosaic_gotchas.md  feedback_mosaic_identity_token_privilege_downgrade.md  feedback_mosaic_legacy_as_blueprint.md  feedback_mosaic_multi_db_connect_live.md  feedback_mosaic_publish_endpoint_collision.md  feedback_mosaic_publishable_datatypes.md  feedback_mosaic_relationship_put_wipes.md  feedback_mosaic_relationship_wiring.md  feedback_mosaic_role_playing_dimensions.md  feedback_mosaic_ship_bar.md  feedback_one_session_per_build.md  feedback_security_filter_naming.md  feedback_strategy_automation_audit_2026_04_22.md  project_mosaic_build.md  reference_build_mosaic_skill.md  reference_chrome_mcp_capture.md  reference_data_modeling_foundations.md  reference_local_skill_bundles.md  (+62 more)
(+54 files in other folders)
